# ci-tests

./: e2e.yml  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  e2e_v2.yml
e2e/one/: pyproject.toml
e2e/two/: pyproject.toml
